--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
@@ -7,9 +8,7 @@
     "sourceMap": true,
     "outDir": "./lib",
     "rootDir": "./src",
-    "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "esModuleInterop": true
   }
 }
