--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "type-check": "tsc --noEmit",
     "clean": "rimraf lib",
     "format": "prettier --write \"**/*.{ts,js,json}\"",
     "lint": "eslint --fix \"src/**/*.{ts,js,json}\"",
@@ -47,7 +48,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@tsconfig/strictest": "^1.0.2",
     "@types/eslint": "^8.4.10",
-    "@types/node": "^16.11.6",
+    "@types/node": "^16.11.7",
     "concurrently": "^7.6.0",
     "eslint": "^8.28.0",
     "eslint-config-nirtamir2": "^0.0.45",
